--- a/.vercel/output/static/style.css
+++ b/.vercel/output/static/style.css
@@ -358,9 +358,9 @@ background-image: url('https://m.media-amazon.com/images/I/81NE5bSsUML._AC_UF894
         font-size: 14px; /* Reduce font size for smaller screens */
     }
 }
-@media (max-width: 480px) {
+@media (max-width: 400px) {
     .auth-buttons{
-        display: flex;
+        display: grid;
     }
     .auth-buttons div{
         justify-content: center;
