--- a/FrontEnd/myEvents.css
+++ b/FrontEnd/myEvents.css
@@ -381,9 +381,17 @@ background-image: url('https://m.media-amazon.com/images/I/81NE5bSsUML._AC_UF894
     }
 }
 @media (max-width: 400px) {
-    .auth-buttons{
-        display:grid;
+   .auth-buttons div{
+        display:none;
+        
     }
+     img:hover {
+        border: 1px solid white;
+       display:block;
+       position: relative;
+        gap:60;
+    }
+   
     .event-details {
         padding: 10px; /* Further reduce padding for very small screens */
     }
