--- a/FrontEnd/src/style.css
+++ b/FrontEnd/src/style.css
@@ -474,7 +474,7 @@ body {
         }
         
 
-        #cards-div{
+        #About{
             border: none;
             background:none;
         }
